<resources>
    <string name="app_name">Walking</string>
    <string name="db">DB</string>
    <string name="start">시작</string>
    <string name="exit">종료</string>
    <string name="height">키:</string>
    <string name="weight">무게:</string>
    <string name="date">날짜</string>
    <string name="time">시간</string>
    <string name="distance">거리</string>
    <string name="calorie">칼로리</string>
    <string name="dialog_exit">종료하시겠습니까?</string>
    <string name="yes">O</string>
    <string name="no">X</string>

</resources>
